k8s/demo/dynamicacme.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dynamicacme

# generate API secrets
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamicacme
  namespace: dynamicacme
  labels:
    app: dynamicacme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamicacme
  template:
    metadata:
      labels:
        app: dynamicacme
    spec:
      volumes:
        - name: tls
          secret:
            secretName: webhook-tls
            items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
      containers:
      - name: dynamicacme
        image: registry-internal.${INGRESS_HOST}/dynamicacme:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        volumeMounts:
        - name: "tls"
          mountPath: /etc/dynamicacme

---
apiVersion: v1
kind: Service
metadata:
  name: dynamicacme
  namespace: dynamicacme
spec:
  selector:
    app: dynamicacme
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
