k8s/demo/enroll.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: enroll

# generate API secrets
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enroll
  namespace: enroll
  labels:
    app: enroll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enroll
  template:
    metadata:
      labels:
        app: enroll
    spec:
      volumes:
        - name: ca
          secret:
            secretName: ca-secret
            items:
            - key: ca.crt
              path: ca.crt
      containers:
      - name: enroll
        image: registry-internal.${INGRESS_HOST}/enrollhandler:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: "ca"
          mountPath: /etc/enroll

---
apiVersion: v1
kind: Service
metadata:
  name: enroll
  namespace: enroll
spec:
  selector:
    app: enroll
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: enroll
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  rules:
  - host: "${INGRESS_HOST}"
    http:
      paths:
      - path: /mdm/enroll
        pathType: Prefix
        backend:
          service:
            name: enroll
            port:
              number: 80
  tls:
    - secretName: ingress-tls
      hosts:
        - ${INGRESS_HOST}
